--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,25 @@ ol, ul, li {
     padding-top: 24px;
     padding-bottom: 24px;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.current {
+    position: relative;
+    color:#404BBF;
+}
+
+.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    background-color: #404BBF;
+    height: 4px;
+    width: 100%;
+}
+
 .nav-link:hover,
 .nav-link:focus {
     color: #404BBF;
@@ -98,6 +116,7 @@ ol, ul, li {
     font-size: 16px;;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-link:hover,
@@ -109,6 +128,16 @@ ol, ul, li {
     background: #2E2F42;
     flex-shrink: 0;
     padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7)
+        rgba(46, 47, 66, 0.7)),
+    url(../images/office.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+    padding: 188px 0;
+    margin: 0 auto;
 }
 .hero-title {
     color: #FFFFFF;
