--- a/css/styles.css
+++ b/css/styles.css
@@ -371,3 +371,14 @@ footer {
 .logo-link {
     margin-bottom: 16px;
 }
+
+.icon-box {
+    height: 112px;
+    border-radius: 4px;
+    border: 1px solid  #8E8F99;
+    background-color: #F4F4FD;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+}
