--- a/css/styles.css
+++ b/css/styles.css
@@ -405,3 +405,46 @@ footer {
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.team-social-links:hover,
+.team-social-links:focus {
+    background-color: #404bbf;
+}
+
+.footer-socials-text {
+    color: #FFF;
+    font-size: 16px;
+    margin-top: 0;
+    font-weight: 500;
+    line-height: 1.5;
+}
+
+.footer-social-svg {
+    fill: #f4f4fd;
+}
+
+.footer-social-links:hover,
+.footer-social-links:focus {
+    background-color: #31d0aa;
+}
+
+.footer-social-list {
+    display: flex;
+    gap: 16px;
+}
+
+.social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-social-links {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
