--- a/css/styles.css
+++ b/css/styles.css
@@ -126,12 +126,11 @@ ol, ul, li {
 
 .hero {
     background: #2E2F42;
-    flex-shrink: 0;
     padding: 188px 0;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7)
         rgba(46, 47, 66, 0.7)),
-    url(../images/office.jpg);
+     url(../images/office.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -353,6 +352,7 @@ letter-spacing: 0.02em;
 
 footer {
     background-color: #2E2F42;
+    display: flex;
 }
 
 .visually-hidden {
