--- a/css/styles.css
+++ b/css/styles.css
@@ -128,15 +128,15 @@ ol, ul, li {
     background: #2E2F42;
     padding: 188px 0;
     background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7)
+        rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)),
-     url(../images/office.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-    padding: 188px 0;
-    margin: 0 auto;
+    url(../images/people-office.jpg);
+     background-repeat: no-repeat;
+     background-size: cover;
+     background-position: center;
+     height: 600px;
+     padding: 188px 0;
+     margin: 0 auto;
 }
 .hero-title {
     color: #FFFFFF;
