--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ img {
 
 .header {
     border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -137,6 +140,8 @@ ol, ul, li {
      height: 600px;
      padding: 188px 0;
      margin: 0 auto;
+     max-width: 1440px;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-title {
     color: #FFFFFF;
