--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,10 @@ footer {
     margin-top: 8px;
 }
 
+.social-svg {
+    fill: #f4f4fd;
+}
+
 .team-social-item {
     width: 40px;
     height: 40px;
@@ -453,4 +457,37 @@ footer {
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.img-hover {
+    position: relative;
+    overflow: hidden;
+}
+
+.text-hover {
+    position: absolute;
+    top: 0;
+    background-color: #4D5AE5;
+    height: 100%;
+    transform: translateY(100%);
+    color: #F4F4FD;
+    font-size: 16px;
+    padding: 40px 32px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin: 0;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover .text-hover {
+    transform: translate(0%);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
