--- a/css/styles.css
+++ b/css/styles.css
@@ -430,6 +430,8 @@ footer {
     margin-top: 0;
     font-weight: 500;
     line-height: 1.5;
+    margin-bottom: 16px;
+    letter-spacing: 0.02em;
 }
 
 .footer-social-svg {
